# stm32l152_template

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
.github/workflows/: cmake.yml
Core/Inc/: LCD.h  LCD_def.h  stm32l1xx_it.h
Core/Src/: LCD.c  asm_utils.s  main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
